[package]
name = "xmlem"
description = "XML DOM implementation with pretty printing"
authors = ["Brendan Molloy <brendan@bbqsrc.net>"]
version = "0.3.1"
edition = "2021"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/xmlem/xmlem"
categories = ["encoding", "data-structures"]
keywords = ["xml", "dom", "mlem", "css"]

[dependencies]
cssparser = "0.34.0"
indexmap = "2.6.0"
once_cell = "1.17.1"
precomputed-hash = "0.1.1"
qname = "0.2.0"
quick-xml = "0.37.0"
selectors = "0.26.0"
slotmap = "1.0.6"
tracing = "0.1.37"
unic-ucd = "0.9.0"
